improve ProgressController, components, Theme / add CurrentActivityContext / add Robolectric Test examples / update libraries /